maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: value SetDirection
   SetDirection(Direction.North)
   ^Escaper:12: error: value North is not a member of object plm.universe.Direction
   SetDirection(Direction.North)
                          ^