maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  verif()
  while(!estSurBiscuit){
    keepHandOnSideWall()
  }
  prendBiscuit()
  retourne()
}
def verif() {
  while (getX()!=0){
   SetDirection(Direction.North)
  while( !estFaceMur()){
    avance()
  }
  while (estFaceMur){
    droite()
  }
    avance()
}
}
def keepHandOnSideWall(){
  avance()
  gauche()
  while (estFaceMur){
    droite()
  }
}